Preventing number autoformatting on iOS

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -163,10 +163,8 @@ a:hover {
         z-index: 100;
         position: relative;
     }
-    p.contact {
+    a.contact:first-of-type {
         margin-top: 30px;
-        width: fit-content;
-        display: inline-block;
     }
     .contact {
         font-family: var(--accent-font);
